syntax = "proto3";

package order;

service OrderService {
  // A simple RPC
  rpc CreateOrder (Order) returns (OrderResponse) {}
}

message Order {
  string id = 1;
  string status = 2;
  int64 created_on = 3;

  message OrderItem {
    string code = 1;
    string name = 2;
    float unit_price = 3;
    int32 quantity = 4;
  }

  repeated OrderItem order_items = 4;
}

message OrderResponse {
  string order_id = 1;
  string error = 2;
}
